# value-bet-live-detection

./: .gitignore  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_flashscore.py  view_parquet.py
ML/: analyze.py
dags/: discover_matches_dag.py  live_match_controller.py  live_match_orchestrator.py
dags/scripts/: flashscore_scraper.py
experiments/: test_brotli.py  test_discord.py  test_flashscore.py  test_playwright.py  test_playwright2.py
scripts/: init_user.sh
services/alert_service/: Dockerfile  main.py
services/discord_bot/: Dockerfile  database.py  main.py  requirements.txt  ui_components.py
services/discord_bot/cogs/: betting.py  daily_announcer.py  profile.py
services/ingestion_service/: Dockerfile
services/ingestion_service/src/: main.py
services/ingestion_service/src/application/: ingestion_app.py  interfaces.py
services/ingestion_service/src/infrastructure/: flashscore_provider.py  kafka_publisher.py  mock_provider.py
services/streaming_processor/: Dockerfile
services/streaming_processor/src/: main.py
shared_lib/domain/: events.py
tests/unit/: test_flashscore_provider.py
