[tool.poetry]
name = "value-bet-live-detection"
version = "0.1.0"
description = "Live value bets detection in football"
authors = ["Krzysztof Matyla <depores1337@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
aiokafka = "^0.10.0"
pyspark = "3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
ruff = "^0.3.0"
pip-audit = "^2.7.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true